deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulk-mailer
  labels:
    app.kubernetes.io/name: bulk-mailer
spec:
  selector:
    app.kubernetes.io/name: bulk-mailer
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
